--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -2,3 +2,9 @@ PORT=5000
 MONGODB_URI=mongodb+srv://<user>:<password>@<cluster>/<db>?retryWrites=true&w=majority
 JWT_SECRET=change-me
 CORS_ORIGIN=http://localhost:3000
+
+# Email Configuration for Password Reset
+# For Gmail: use your Gmail address and an App Password (not your regular password)
+# To create an App Password: https://myaccount.google.com/apppasswords
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password-here
